# NarrativeNews

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  README.md  news_intelligence_presentation.html  pyproject.toml
app/: __init__.py  bootstrap.py  cli.py
app/config/: logging.py  settings.py
app/db/: connection.py  init_db.py  schema.py
app/ingestion/: __init__.py
app/models/: __init__.py  claims_extraction.py  entities.py  narrative.py  narrative_intelligence.py  narrative_snapshot.py  rag.py
app/repositories/: __init__.py  article_chunk_repository.py  article_repository.py  base.py  claim_cluster_repository.py  claim_repository.py  narrative_analysis_repository.py  narrative_article_analysis_repository.py  narrative_result_repository.py  narrative_run_repository.py  source_repository.py
app/services/: __init__.py  chunking.py  claim_batch.py  claim_extraction.py  deduplication.py  deploy_snapshot.py  embeddings.py  llm.py  (+7 more)
examples/: __init__.py  basic_usage.py  build_presentation_apple.py  local_llama_usage.py  news_intelligence_presentation.html  news_intelligence_presentation_styled.html
tests/: test_archive_discovery.py  test_bulk_ingestion.py  test_chunking.py  test_claim_batch.py  test_claim_extraction.py  test_deploy_snapshot.py  test_http_fetcher.py  test_ingestion_pipeline.py  test_local_llm.py  test_narrative_intelligence.py  test_narrative_labeling.py  test_narrative_run.py  test_normalization.py  test_openai_compatible_llm.py  test_parsers.py  test_rag_retrieval.py  test_repositories.py  test_schema.py  test_settings.py  test_validation.py
(+106 files in other folders)
