[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "narrative-news"
version = "0.1.0"
description = "Foundation layer for a Russian-language news analysis project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = []
ui = ["streamlit>=1.35"]
