[tool.poetry]
name = "narrative-news"
version = "0.1.0"
description = "Foundation layer for a Russian-language news analysis project."
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
streamlit = ">=1.35"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
